--- a/2024DA04200_Problem_Statement_1.ipynb
+++ b/2024DA04200_Problem_Statement_1.ipynb
@@ -27,53 +27,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "BJFpa_1haflG",
-        "outputId": "9196ff4a-171e-4285-cf40-12a6f89a91b6"
-      },
-      "execution_count": 140,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%cd /content/drive/MyDrive/ML_Assignment_01/ML_AssignmentPS01"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "oQx4wlE5d5S5",
-        "outputId": "2cda4b9c-f3dd-410f-931a-5d9baeea6ac9"
-      },
-      "execution_count": 141,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content/drive/MyDrive/ML_Assignment_01/ML_AssignmentPS01\n"
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "### **1. Importing the dataset:**\n",
@@ -91,9 +44,11 @@
         "import numpy as np\n",
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
-        "%matplotlib inline\n",
         "import warnings\n",
         "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.feature_selection import VarianceThreshold, mutual_info_classif\n",
+        "from sklearn.metrics import confusion_matrix, roc_auc_score, roc_curve, auc, accuracy_score, precision_score, recall_score, f1_score\n",
+        "\n",
         "dataset_file = './risk_factors_cervical_cancer.csv'\n",
         "\n",
         "df = pd.read_csv(dataset_file)"
@@ -2915,7 +2870,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.feature_selection import VarianceThreshold, mutual_info_classif\n",
+        "\n",
         "\n",
         "X = df.drop(columns=['Biopsy'])\n",
         "y = df['Biopsy']\n",
@@ -3271,19 +3226,6 @@
       "metadata": {
         "id": "V_JWAGbHKX5Z"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\n",
-        "from sklearn.metrics import confusion_matrix, classification_report, roc_auc_score, roc_curve, auc, accuracy_score\n",
-        "from sklearn.metrics import precision_score, recall_score, f1_score, roc_auc_score"
-      ],
-      "metadata": {
-        "id": "92Id-Gtin747"
-      },
-      "execution_count": 166,
-      "outputs": []
     },
     {
       "cell_type": "code",
